:recycle: refactor: swagger code improvements, DeleteTransaction and UpdateTransaction
