# server/docs/swagger.json
@@ -24,19 +24,13 @@
         "/health": {
             "get": {
                 "description": "Retorna o status de funcionamento da API",
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "Health"
                 ],
                 "summary": "Verifica se a API está online",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/health.Health"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -382,14 +376,6 @@
                 },
                 "pagination": {
                     "$ref": "#/definitions/dto.PaginationDto"
-                }
-            }
-        },
-        "health.Health": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string"
                 }
             }
         }
