# server/src/api/routes/health/health.go
@@ -6,13 +6,12 @@ type Health struct {
 	Status string `json:"status"`
 }
 
-//	HealthCheck godoc
-//	@Summary Verifica se a API está online
-//	@Description Retorna o status de funcionamento da API
-//	@Tags Health
-//	@Produce json
-//	@Success 200	{object} Health
-//	@Router	/health [get]
+// healthRoute godoc
+// @Summary Verifica se a API está online
+// @Description Retorna o status de funcionamento da API
+// @Tags Health
+// @Success 200
+// @Router /health [get]
 func healthRoute(c *fiber.Ctx) error {
 	var health Health
 	health.Status = "ok"
